--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="./docs/r-logo.png">
     <link rel="stylesheet" href="main.css">
     <!-- Font -->
-    <link href="https://fonts.googleapis.com/css?family=Maven+Pro" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Maven+Pro:400,700" rel="stylesheet">
     <!-- Bootstrap -->
     <link rel="stylesheet"
     href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -24,7 +24,7 @@
   <body style="height:100%;font-family: 'Maven Pro', sans-serif;">
 
 
-    <nav class="navbar sticky-top navbar-expand-sm navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
       <a class="navbar-brand" href="/">
         <img src="./docs/r-logo.png" width="35" height="35" alt="">
         Raymond Kwan
@@ -36,10 +36,10 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="https://github.com/RayKayy">Github <i class="fab fa-github"></i></a>
+            <a class="nav-link" href="#about">About <i class="fas fa-book-open"></i></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://www.linkedin.com/in/wai-mong-raymond-kwan">LinkedIn <i class="fab fa-linkedin"></i></a>
+            <a target="_blank" class="nav-link" href="https://www.linkedin.com/in/wai-mong-raymond-kwan">LinkedIn <i class="fab fa-linkedin"></i></a>
           </li>
         </ul>
         <ul class="navbar-nav">
@@ -73,11 +73,17 @@
 
           <h5 class="skills mt-4 text-center">Contact</h5>
           <div class="contact">
-            <ul class="list-group">
+            <ul class="list-group text-center text-lg-left">
               <li class="list-group-item"><i class="icons fas fa-phone-square"></i>  +1 (416)-884-2950</li>
-              <li class="list-group-item"><i class="icons fas fa-envelope-square"></i>  <a href="mailto:rayk199492@gmail.com">rayk199492@gmail.com</a></li>
-              <li class="list-group-item"><i class="icons fab fa-instagram"></i>  @raymondk94</li>
-              <li class="list-group-item"><i class="icons fab fa-weixin"></i>  raymondk94</li>
+              <li class="list-group-item email"><i class="icons fas fa-envelope-square"></i>  <a href="mailto:raymond.kwan@mail.utoronto.ca">raymond.kwan@mail.utoronto.ca</a></li>
+              <li class="list-group-item">
+                <i class="icons fab fa-linkedin"></i>  <a target="_blank" href="https://www.linkedin.com/in/wai-mong-raymond-kwan">wai-mong-raymond-kwan</a>
+              </li>
+              <li class="list-group-item">
+                <i class="icons fab fa-github"></i>  <a target="_blank" href="https://github.com/RayKayy">RayKayy</a>
+              </li>
+                <!-- <li class="list-group-item"><i class="icons fab fa-instagram"></i>  @raymondk94</li>
+              <li class="list-group-item"><i class="icons fab fa-weixin"></i>  raymondk94</li> -->
             </ul>
           </div>
 
@@ -88,11 +94,11 @@
               <div class="col"><i class="fab fa-react"></i></div>
               <div class="col"><i class="fab fa-node-js"></i></div>
               <div class="w-100"></div>
-              <div class="col"><i class="fab fa-python"></i></div>
-              <div class="col"><i class="fas fa-gem"></i></div>
-              <div class="w-100"></div>
-              <div class="col"><i class="fab fa-css3-alt"></i></div>
               <div class="col"><i class="fab fa-html5"></i></div>
+              <div class="col"><i class="fab fa-css3-alt"></i></div>
+              <div class="w-100"></div>
+              <div class="col"><i class="fas fa-gem"></i></div>
+              <div class="col"><i class="fab fa-python"></i></div>
               <div class="col"><i class="fas fa-database"></i></div>
 
             </div>
@@ -105,42 +111,71 @@
         <div class="col-lg-9 right-projects" style="height:100%">
 
 
-          <div class="row d-flex justify-content-center mt-5">
-            <h1 class="text-center project-title">MY PROJECTS</h1>
-            <div class="w-100 h-0"></div>
-            <div id="carouselExampleControls" class="carousel slide project-slides mt-3" data-ride="carousel">
+          <div class="scrollable">
+
+          <section id="about" class="about-me row d-flex mt-3">
+            <h2>About Me</h2>
+            <div class="w-100"></div>
+            <strong>H.B.A. in Environmental Management <i class="fas fa-arrow-right"></i> {Web Developer};</strong>
+            <div class="w-100"></div>
+            <strong>{ was_in: ['Hong Kong', 'Shanghai'], currently_in: 'Toronto' };</strong>
+            <div class="w-100"></div>
+            <p class="text-justify">
+              <em>I fell in love with coding after taking my first course in programming towards the end of my degree.</em><br /><br />
+              Highly motivated and efficient individual with solid skills working with Javascript and the MERN stack, both
+              independently and collaboratively; experience with multiple programming languages. I have planned, managed and developed web
+              applications in a team-based environment. Works well in complex, dynamic, and deadline driven environments. Exceptional
+              verbal and written communication skills, fluent in English, Mandarin, and Cantonese. Internationally experienced,
+              flexible and adaptive to varying environments both culturally and physically.<br /><br />
+              <em>Actively searching for a position as a Junior Developer.</em>
+            </p>
+
+          </section>
+
+
+          <div class="row d-flex justify-content-center mt-5 projects">
+            <h2 class="text-center project-title">MY PROJECTS</h2>
+            <!-- <div class="w-100 h-0"></div> -->
+            <div id="carouselProject" class="carousel slide project-slides mt-3" data-ride="carousel">
               <div class="carousel-inner">
                 <div class="carousel-item active">
-                  <img class="d-block w-100" src="https://github.com/RayKayy/rainforest-rails/raw/master/docs/Home.png?raw=true" alt="First slide">
+                  <a target="_blank" href="https://github.com/RayKayy/rainforest-rails/">
+                    <img class="d-block w-100" src="https://github.com/RayKayy/rainforest-rails/raw/master/docs/Home.png?raw=true" alt="First slide">
+                  </a>
                   <div class="carousel-caption d-none d-md-block">
                     <h5>Rainforest</h5>
                     <p>E-commerce app using Ruby on Rails</p>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block w-100" src="https://github.com/RayKayy/tweeter/raw/master/docs/tweet-box1.png?raw=true" alt="Second slide">
+                  <a target="_blank" href="https://github.com/RayKayy/tweeter/">
+                    <img class="d-block w-100" src="https://github.com/RayKayy/tweeter/raw/master/docs/tweet-box1.png?raw=true" alt="Second slide">
+                  </a>
                   <div class="carousel-caption d-none d-md-block">
                     <h5>Tweeter</h5>
-                    <p>A simple Twitter clone</p>
+                    <p>A simple Twitter clone using MongoDB</p>
                   </div>
                 </div>
                 <div class="carousel-item">
-                  <img class="d-block w-100" src="https://github.com/RayKayy/hichat-app/raw/master/docs/hichat_demo.png?raw=true" alt="Third slide">
+                  <a target="_blank" href="https://github.com/RayKayy/hichat-app/">
+                    <img class="d-block w-100" src="https://github.com/RayKayy/hichat-app/raw/master/docs/hichat_demo.png?raw=true" alt="Third slide">
+                  </a>
                   <div class="carousel-caption d-none d-md-block">
                     <h5>HiChat</h5>
-                    <p>A real-time single-page web app using React and web-sockets</p>
+                    <p>A real-time chat app using React and web-sockets</p>
                   </div>
                 </div>
               </div>
-              <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+              <a class="carousel-control-prev" href="#carouselProject" role="button" data-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="sr-only">Previous</span>
               </a>
-              <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+              <a class="carousel-control-next" href="#carouselProject" role="button" data-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
               </a>
             </div>
+          </div>
           </div>
 
 
