--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               <div class="w-100"></div>
               <strong>H.B.A. in Environmental Management <i class="fas fa-arrow-right"></i> {Web Developer};</strong>
               <div class="w-100"></div>
-              <strong>{ was_in: ['Hong Kong', 'Shanghai'], currently_in: 'Toronto' };</strong>
+              <strong>location = { was_in: ['Hong Kong', 'Shanghai'], currently_in: 'Toronto' };</strong>
               <div class="w-100"></div>
               <p class="text-justify">
                 <em>I fell in love with coding after taking my first course in programming towards the end of my degree.</em><br /><br />
@@ -132,37 +132,37 @@
             </section>
 
 
-            <div id="projects" class="row d-flex justify-content-center mt-5 projects">
+            <section id="projects" class="sect row d-flex justify-content-center mt-5 projects">
               <h2 class="section-head">My Projects</h2>
-              <!-- <div class="w-100 h-0"></div> -->
+              <div class="w-100 h-0"></div>
               <div id="carouselProject" class="carousel slide project-slides mt-3" data-ride="carousel">
                 <div class="carousel-inner">
                   <div class="carousel-item active">
+                    <img class="d-block w-100" src="https://github.com/RayKayy/rainforest-rails/raw/master/docs/Home.png?raw=true" alt="Rainforest project">
                     <a target="_blank" href="https://github.com/RayKayy/rainforest-rails/">
-                      <img class="d-block w-100" src="https://github.com/RayKayy/rainforest-rails/raw/master/docs/Home.png?raw=true" alt="First slide">
+                      <div class="carousel-caption d-none d-md-block">
+                        <h5>Rainforest</h5>
+                        <p>A e-commerce app using Rails</p>
+                      </div>
                     </a>
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>Rainforest</h5>
-                      <p>E-commerce app using Ruby on Rails</p>
-                    </div>
                   </div>
                   <div class="carousel-item">
+                    <img class="d-block w-100" src="https://github.com/RayKayy/tweeter/raw/master/docs/tweet-box1.png?raw=true" alt="Tweeter project">
                     <a target="_blank" href="https://github.com/RayKayy/tweeter/">
-                      <img class="d-block w-100" src="https://github.com/RayKayy/tweeter/raw/master/docs/tweet-box1.png?raw=true" alt="Second slide">
+                      <div class="carousel-caption d-none d-md-block">
+                        <h5>Tweeter</h5>
+                        <p>A simple Twitter clone</p>
+                      </div>
                     </a>
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>Tweeter</h5>
-                      <p>A simple Twitter clone using MongoDB</p>
-                    </div>
                   </div>
                   <div class="carousel-item">
+                    <img class="d-block w-100" src="https://github.com/RayKayy/hichat-app/raw/master/docs/hichat_demo.png?raw=true" alt="Hichat project">
                     <a target="_blank" href="https://github.com/RayKayy/hichat-app/">
-                      <img class="d-block w-100" src="https://github.com/RayKayy/hichat-app/raw/master/docs/hichat_demo.png?raw=true" alt="Third slide">
+                      <div class="carousel-caption d-none d-md-block">
+                        <h5>HiChat</h5>
+                        <p>A real-time chat app using React and web-sockets</p>
+                      </div>
                     </a>
-                    <div class="carousel-caption d-none d-md-block">
-                      <h5>HiChat</h5>
-                      <p>A real-time chat app using React and web-sockets</p>
-                    </div>
                   </div>
                 </div>
                 <a class="carousel-control-prev" href="#carouselProject" role="button" data-slide="prev">
@@ -174,58 +174,14 @@
                   <span class="sr-only">Next</span>
                 </a>
               </div>
-            </div>
+            </section>
           </div>
-
-
-          <!-- <div class="pt-3" id="accordion">
-            <div class="card">
-              <div class="card-header text-center" id="headingOne" data-toggle="collapse" data-target="#collapseOne"
-                aria-expanded="true" aria-controls="collapseOne">
-                <h6>Contact</h6>
-              </div>
-              <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-                <div class="card-body">
-                  rayk199492@gmail.com
-                  </br>
-                  +1 (416)-884-2950
-                  </br>
-                </div>
-              </div>
-            </div>
-            <div class="card">
-              <div class="card-header text-center" id="headingTwo" data-toggle="collapse" data-target="#collapseTwo"
-                aria-expanded="true" aria-controls="collapseOne">
-                Skills
-              </div>
-              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                <div class="card-body">
-                  PROGRAMMING LANGUAGES
-                  Javascript
-                  Python
-                  HTML
-                  CSS
-                  SQL
-                  FRAMEWORK, LIBRARIES, ENVIRONMENTS
-                  NodeJS
-                  ReactJS
-                  Express
-                  JQuery
-                  Knex
-                  VCS, DATABASE SYSTEMS
-                  PostgresSQL
-                  MongoDB
-                  LANGUAGES
-                  English
-                  Mandarin
-                  Cantonese
-                </div>
-              </div>
-            </div>
-          </div> -->
         </div>
       </div>
     </div>
+
+
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
     integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
     crossorigin="anonymous"></script>
