--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <body style="height:100%;font-family: 'Maven Pro', sans-serif;">
 
 
-    <nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
+    <nav class="navbar fixed-top navbar-expand-sm navbar-dark">
       <a class="navbar-brand" href="/">
         <img src="./docs/r-logo.png" width="35" height="35" alt="">
         Raymond Kwan
@@ -44,9 +44,8 @@
         </ul>
         <ul class="navbar-nav">
           <li class="nav-item">
-            <form method="get" action="./docs/raymond-kwan-resume.pdf">
+            <a target="_blank" href="./docs/raymond-kwan-resume.pdf" download>
               <button
-                type="submit"
                 class="btn-sm btn-outline-info"
                 data-toggle="popover"
                 data-placement="bottom"
@@ -54,7 +53,7 @@
                 <i class="fas fa-download"></i>
                 Resume
               </button>
-            </form>
+            </a>
           </li>
         </ul>
       </div>
@@ -75,13 +74,17 @@
           <h5 class="skills mt-4 text-center">Contact</h5>
           <div class="contact">
             <ul class="list-group text-center text-lg-left">
-              <li class="list-group-item"><i class="icons fas fa-phone-square"></i>  +1 (416)-884-2950</li>
-              <li class="list-group-item email"><i class="icons fas fa-envelope-square"></i>  <a href="mailto:raymond.kwan@mail.utoronto.ca">raymond.kwan@mail.utoronto.ca</a></li>
-              <li class="list-group-item">
-                <i class="icons fab fa-linkedin"></i>  <a target="_blank" href="https://www.linkedin.com/in/wai-mong-raymond-kwan">wai-mong-raymond-kwan</a>
+              <li class="list-group-item hvr-icon-grow">
+                <i class="hvr-icon icons fas fa-phone-square"></i>  +1 (416)-884-2950
               </li>
-              <li class="list-group-item">
-                <i class="icons fab fa-github"></i>  <a target="_blank" href="https://github.com/RayKayy">RayKayy</a>
+              <li class="list-group-item hvr-icon-grow email">
+                <i class="hvr-icon icons fas fa-envelope-square"></i>  <a href="mailto:raymond.kwan@mail.utoronto.ca">raymond.kwan@mail.utoronto.ca</a>
+              </li>
+              <li class="list-group-item hvr-icon-grow">
+                <i class="hvr-icon icons fab fa-linkedin"></i>  <a target="_blank" href="https://www.linkedin.com/in/wai-mong-raymond-kwan">wai-mong-raymond-kwan</a>
+              </li>
+              <li class="list-group-item hvr-icon-grow">
+                <i class="hvr-icon icons fab fa-github"></i>  <a target="_blank" href="https://github.com/RayKayy">RayKayy</a>
               </li>
                 <!-- <li class="list-group-item"><i class="icons fab fa-instagram"></i>  @raymondk94</li>
               <li class="list-group-item"><i class="icons fab fa-weixin"></i>  raymondk94</li> -->
@@ -91,16 +94,16 @@
           <h5 class="skills mt-4 text-center">Skills</h5>
           <div class="container text-center languages mt-1 mb-5">
             <div class="row">
-              <div class="col"><i class="fab fa-js-square"></i></div>
-              <div class="col"><i class="fab fa-react"></i></div>
-              <div class="col"><i class="fab fa-node-js"></i></div>
+              <div class="col"><i class="fast fab fa-js-square"></i></div>
+              <div class="col"><i class="slow fab fa-react"></i></div>
+              <div class="col"><i class="slow fab fa-node-js"></i></div>
               <div class="w-100"></div>
-              <div class="col"><i class="fab fa-html5"></i></div>
-              <div class="col"><i class="fab fa-css3-alt"></i></div>
+              <div class="col"><i class="fast fab fa-html5"></i></div>
+              <div class="col"><i class="slow fab fa-css3-alt"></i></div>
               <div class="w-100"></div>
-              <div class="col"><i class="fas fa-gem"></i></div>
-              <div class="col"><i class="fab fa-python"></i></div>
-              <div class="col"><i class="fas fa-database"></i></div>
+              <div class="col"><i class="slow fas fa-gem"></i></div>
+              <div class="col"><i class="fast fab fa-python"></i></div>
+              <div class="col"><i class="slow fas fa-database"></i></div>
             </div>
           </div>
         </div>
@@ -122,10 +125,13 @@
               <div class="w-100"></div>
               <p class="text-justify">
                 <em>I fell in love with coding after taking my first course in computer science towards the end of my degree.</em><br /><br />
-                Highly motivated and efficient individual with solid skills working with Javascript and the MERN stack, both
-                independently and collaboratively; experience with multiple programming languages. I have planned, managed and developed web
-                applications in a team-based environment. Works well in complex, dynamic, and deadline driven environments. Exceptional
-                verbal and written communication skills, fluent in English, Mandarin, and Cantonese. Internationally experienced,
+                I am a highly motivated and efficient individual with solid skills working with Javascript and the MERN stack,
+                both independently and collaboratively; experience with multiple programming languages.
+                Understand core concepts in computer science such as OOP,  recursion, complexity, etc;
+                as well as both development processes such as Test Driven Development (TDD) and Behaviour Driven Development (BDD).
+                I have planned, managed and developed web applications in a team-based environment.
+                Works well in complex, dynamic, and deadline driven environments. Exceptional verbal and written communication skills,
+                fluent in English, Mandarin, and Cantonese. Internationally experienced,
                 flexible and adaptive to varying environments both culturally and physically.<br /><br />
                 <em>Currently actively searching for a position as a Junior Developer.</em>
               </p>
